added second team intro

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@import './components/ProfilesContainer/ProfilesContainer.scss';
+@import './components/ProfileCard/ProfileCard.scss';
+@import "./components/TeamIntro/TeamIntro.scss";
+@import "./components/SecondTeam/SecondTeam.scss";
+
 .App {
   text-align: center;
 }
