add _typograph.scss in app.scss file and fix the issue of rem, working on fixing both 2 pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import './components/ProfileCard/ProfileCard.scss';
 @import "./components/TeamIntro/TeamIntro.scss";
 @import "./components/SecondTeam/SecondTeam.scss";
+@import "./styles/_typography.scss";  
 
 .App {
   text-align: center;
