--- a/src/components/ProfileCard/ProfileCard.scss
+++ b/src/components/ProfileCard/ProfileCard.scss
@@ -1,18 +1,33 @@
 .profile-container {
   display: flex;
   flex-direction: column;
-  padding: 1rem 0;
   img,
   h2,
   p {
     margin: 0;
   }
   .profile-image {
-    width: 21rem;
+    max-width: 35.2rem;
+    max-height: 35.2rem;
     margin-bottom: 1rem;
   }
   .profile-name {
+    color: var(--color-styles-darkest, #000);
+
+    font-family: "Montserrat";
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 3.2rem;
     display: inline-block;
-    width: 100%;
+    // max-width: 25.6rem;
+    max-width: 100%;
+  }
+  .profile-position {
+    font-family: "Lato";
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.4rem;
   }
 }
