--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -16,10 +16,10 @@ html {
   }
   
   body {
-    font-family: "Rubik", sans-serif;
+    font-family: sans-serif;
     line-height: 1;
-    font-weight: 400;
-    color: #555;
-    overflow-x: hidden;
+    // font-weight: 400;
+    // color: #555;
+    // overflow-x: hidden;
     /* background-color: gray ; */
   }
