--- a/src/components/ProfileCard/ProfileCard.scss
+++ b/src/components/ProfileCard/ProfileCard.scss
@@ -1,3 +1,13 @@
+.profile-image-container {
+  max-width: 35.2rem;
+  max-height: 35.2rem;
+  margin-bottom: 1rem;
+  .profile-image{
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .profile-container {
   display: flex;
   flex-direction: column;
@@ -6,11 +16,15 @@
   p {
     margin: 0;
   }
-  .profile-image {
-    max-width: 35.2rem;
-    max-height: 35.2rem;
-    margin-bottom: 1rem;
-  }
+  // .profile-image-container {
+  //   max-width: 35.2rem;
+  //   max-height: 35.2rem;
+  //   margin-bottom: 1rem;
+  //   .profile-image{
+  //     width: 100%;
+  //     height: 100%;
+  //   }
+  // }
   .profile-name {
     color: var(--color-styles-darkest, #000);
 
