completed all pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import "./components/SecondTeam/SecondTeam.scss";
 @import "./styles/_typography.scss";
 @import "./components/ThirdIntro/ThirdIntro.scss";
+@import './components/ContactUs/Contact.scss';
 
 .App {
   text-align: center;
