--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -12,7 +12,7 @@ body {
 html {
   /* font -size: 10px */
   /* 10px / 16px = 0.625 = 62.55 */
-  font-size: 62.5% !important;
+  font-size: 62.5%;
 }
 
 body {
@@ -24,6 +24,6 @@ body {
   /* background-color: gray ; */
 }
 
-.mt-16{
+.mt-16 {
   margin-top: 1.6rem;
 }
